fixed whitespace at bottom

--- a/style.css
+++ b/style.css
@@ -48,9 +48,6 @@ h6 {
   padding: 4% 10%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 10% minmax(max-content, 1fr) 10%;
-      grid-template-rows: 10% minmax(-webkit-max-content, 1fr) 10%;
-      grid-template-rows: 10% minmax(max-content, 1fr) 10%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -189,6 +186,7 @@ h6 {
 }
 
 .footer__social {
+  margin-top: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
